// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListingDetailsSeeTheUnit does not render SeeDetailsOnline when MLS and Listing_Online_Details are not set 1`] = `
<DocumentFragment>
  <section
    class="aside-block see-the-unit translate"
  >
    <div
      class="see-the-unit__heading"
    >
      <h2
        class="text__underline-weighted"
      >
        See the Unit
      </h2>
    </div>
    <div
      class="see-the-unit__subsection"
    >
      <h3
        class="text-heading-md pb-3"
      >
        Make an appointment
      </h3>
      <div>
        <p
          class="text-sm pb-3"
        >
          Call, email, or text to request a tour.
        </p>
        <p />
        <p
          class="text-gray-700 text-sm"
        />
        <div
          class="pt-2"
        >
          <p
            class="pb-1"
          >
            <a>
              <span
                class="ui-icon ui-medium pr-2"
              >
                <svg
                  fill="#0077DA"
                  viewBox="0 0 32 32"
                >
                  <path
                    d="M22 20c-2 2-2 4-4 4s-4-2-6-4-4-4-4-6 2-2 4-4-4-8-6-8-6 6-6 6c0 4 4.109 12.109 8 16s12 8 16 8c0 0 6-4 6-6s-6-8-8-6z"
                  />
                </svg>
              </span>
            </a>
          </p>
          <p
            class="pb-3"
          >
            <a
              href="mailto:undefined"
            >
              <span
                class="pr-2"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-envelope "
                  data-icon="envelope"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M48 64C21.5 64 0 85.5 0 112c0 15.1 7.1 29.3 19.2 38.4L236.8 313.6c11.4 8.5 27 8.5 38.4 0L492.8 150.4c12.1-9.1 19.2-23.3 19.2-38.4c0-26.5-21.5-48-48-48L48 64zM0 176L0 384c0 35.3 28.7 64 64 64l384 0c35.3 0 64-28.7 64-64l0-208L294.4 339.2c-22.8 17.1-54 17.1-76.8 0L0 176z"
                    fill="currentColor"
                  />
                </svg>
              </span>
              Email
            </a>
          </p>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`ListingDetailsSeeTheUnit renders SeeDetailsOnline when both MLS and Listing_Online_Details are set 1`] = `
<DocumentFragment>
  <section
    class="aside-block see-the-unit translate"
  >
    <div
      class="see-the-unit__heading"
    >
      <h2
        class="text__underline-weighted"
      >
        See the Unit
      </h2>
    </div>
    <div
      class="see-the-unit__subsection"
    >
      <h3
        class="text-heading-md pb-3"
      >
        Open houses
      </h3>
      <div>
        <div
          class="open-houses"
        >
          <section
            class=""
          >
            <div
              class="pb-3"
            >
              <p
                class="text text-gray-800 pb-2 flex justify-between items-center"
              >
                <span
                  class="inline-block text-sm uppercase normal-case"
                >
                  December 2, 2019
                </span>
                <span
                  class="inline-block text-xs font-bold ml-5 font-alt-sans"
                >
                  2:00 PM - 6:00 PM
                </span>
              </p>
            </div>
            <div
              class="pb-3"
            >
              <p
                class="text text-gray-800 pb-2 flex justify-between items-center"
              >
                <span
                  class="inline-block text-sm uppercase normal-case"
                >
                  December 6, 2019
                </span>
                <span
                  class="inline-block text-xs font-bold ml-5 font-alt-sans"
                >
                  10:00 AM - 12:00 PM
                </span>
              </p>
              <div
                class="text-sm text-gray-700 pb-3"
              >
                <div
                  class="flex flex-col"
                >
                  <span
                    class="links-space translate"
                  >
                    <span>
                      SFPL
                    </span>
                  </span>
                  <span>
                    1 Library Way, San Francisco
                  </span>
                </div>
              </div>
            </div>
            <div
              class="false"
            >
              <p
                class="text text-gray-800 pb-2 flex justify-between items-center"
              >
                <span
                  class="inline-block text-sm uppercase normal-case"
                >
                  December 7, 2019
                </span>
              </p>
            </div>
          </section>
        </div>
      </div>
    </div>
    <div
      class="see-the-unit__subsection"
    >
      <h3
        class="text-heading-md pb-3"
      >
        See details online
      </h3>
      <div>
        <div
          class="flex-row space-y-1"
        >
          <div>
            <a
              class="seeds-link no-underline"
              href="https://thefrontsteps.com/featured-listings/sfar/mls-481663-2820_scott_street_san_francisco_ca_94123/"
            >
              See the unit on MLS
            </a>
          </div>
          <div>
            <a
              href="https://www.google.com/"
              target="_blank"
            >
              Online Detail
            </a>
          </div>
        </div>
      </div>
    </div>
    <div
      class="see-the-unit__subsection"
    >
      <h3
        class="text-heading-md pb-3"
      >
        Make an appointment
      </h3>
      <div>
        <p
          class="text-sm pb-3"
        >
          Call, email, or text to request a tour.
        </p>
        <p>
          Matthew Burns
        </p>
        <p
          class="text-gray-700 text-sm"
        >
          Leasing Agent
        </p>
        <div
          class="pt-2"
        >
          <p
            class="pb-1"
          >
            <a
              href="tel:415 5552323"
            >
              <span
                class="ui-icon ui-medium pr-2"
              >
                <svg
                  fill="#0077DA"
                  viewBox="0 0 32 32"
                >
                  <path
                    d="M22 20c-2 2-2 4-4 4s-4-2-6-4-4-4-4-6 2-2 4-4-4-8-6-8-6 6-6 6c0 4 4.109 12.109 8 16s12 8 16 8c0 0 6-4 6-6s-6-8-8-6z"
                  />
                </svg>
              </span>
              Call (415) 555-2323
            </a>
          </p>
          <p
            class="pb-3"
          >
            <a
              href="mailto:ae@email.com"
            >
              <span
                class="pr-2"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-envelope "
                  data-icon="envelope"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M48 64C21.5 64 0 85.5 0 112c0 15.1 7.1 29.3 19.2 38.4L236.8 313.6c11.4 8.5 27 8.5 38.4 0L492.8 150.4c12.1-9.1 19.2-23.3 19.2-38.4c0-26.5-21.5-48-48-48L48 64zM0 176L0 384c0 35.3 28.7 64 64 64l384 0c35.3 0 64-28.7 64-64l0-208L294.4 339.2c-22.8 17.1-54 17.1-76.8 0L0 176z"
                    fill="currentColor"
                  />
                </svg>
              </span>
              Email
            </a>
          </p>
        </div>
        <h3
          class="text-heading-sm pb-1"
        >
          Office hours
        </h3>
        <p
          class="text-sm"
        >
          <span>
            8-4 Mon-Thurs

            <br />
            9-4 Fri

            <br />
            10-2 Weekends
          </span>
        </p>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`ListingDetailsSeeTheUnit renders SeeDetailsOnline when only Listing_Online_Details is set 1`] = `
<DocumentFragment>
  <section
    class="aside-block see-the-unit translate"
  >
    <div
      class="see-the-unit__heading"
    >
      <h2
        class="text__underline-weighted"
      >
        See the Unit
      </h2>
    </div>
    <div
      class="see-the-unit__subsection"
    >
      <h3
        class="text-heading-md pb-3"
      >
        Open houses
      </h3>
      <div>
        <div
          class="open-houses"
        >
          <section
            class=""
          >
            <div
              class="pb-3"
            >
              <p
                class="text text-gray-800 pb-2 flex justify-between items-center"
              >
                <span
                  class="inline-block text-sm uppercase normal-case"
                >
                  December 2, 2019
                </span>
                <span
                  class="inline-block text-xs font-bold ml-5 font-alt-sans"
                >
                  2:00 PM - 6:00 PM
                </span>
              </p>
            </div>
            <div
              class="pb-3"
            >
              <p
                class="text text-gray-800 pb-2 flex justify-between items-center"
              >
                <span
                  class="inline-block text-sm uppercase normal-case"
                >
                  December 6, 2019
                </span>
                <span
                  class="inline-block text-xs font-bold ml-5 font-alt-sans"
                >
                  10:00 AM - 12:00 PM
                </span>
              </p>
              <div
                class="text-sm text-gray-700 pb-3"
              >
                <div
                  class="flex flex-col"
                >
                  <span
                    class="links-space translate"
                  >
                    <span>
                      SFPL
                    </span>
                  </span>
                  <span>
                    1 Library Way, San Francisco
                  </span>
                </div>
              </div>
            </div>
            <div
              class="false"
            >
              <p
                class="text text-gray-800 pb-2 flex justify-between items-center"
              >
                <span
                  class="inline-block text-sm uppercase normal-case"
                >
                  December 7, 2019
                </span>
              </p>
            </div>
          </section>
        </div>
      </div>
    </div>
    <div
      class="see-the-unit__subsection"
    >
      <h3
        class="text-heading-md pb-3"
      >
        See details online
      </h3>
      <div>
        <div
          class="flex-row space-y-1"
        >
          <div>
            <a
              href="https://www.google.com/"
              target="_blank"
            >
              Online Detail
            </a>
          </div>
        </div>
      </div>
    </div>
    <div
      class="see-the-unit__subsection"
    >
      <h3
        class="text-heading-md pb-3"
      >
        Make an appointment
      </h3>
      <div>
        <p
          class="text-sm pb-3"
        >
          Call, email, or text to request a tour.
        </p>
        <p>
          Matthew Burns
        </p>
        <p
          class="text-gray-700 text-sm"
        >
          Leasing Agent
        </p>
        <div
          class="pt-2"
        >
          <p
            class="pb-1"
          >
            <a
              href="tel:415 5552323"
            >
              <span
                class="ui-icon ui-medium pr-2"
              >
                <svg
                  fill="#0077DA"
                  viewBox="0 0 32 32"
                >
                  <path
                    d="M22 20c-2 2-2 4-4 4s-4-2-6-4-4-4-4-6 2-2 4-4-4-8-6-8-6 6-6 6c0 4 4.109 12.109 8 16s12 8 16 8c0 0 6-4 6-6s-6-8-8-6z"
                  />
                </svg>
              </span>
              Call (415) 555-2323
            </a>
          </p>
          <p
            class="pb-3"
          >
            <a
              href="mailto:ae@email.com"
            >
              <span
                class="pr-2"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-envelope "
                  data-icon="envelope"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M48 64C21.5 64 0 85.5 0 112c0 15.1 7.1 29.3 19.2 38.4L236.8 313.6c11.4 8.5 27 8.5 38.4 0L492.8 150.4c12.1-9.1 19.2-23.3 19.2-38.4c0-26.5-21.5-48-48-48L48 64zM0 176L0 384c0 35.3 28.7 64 64 64l384 0c35.3 0 64-28.7 64-64l0-208L294.4 339.2c-22.8 17.1-54 17.1-76.8 0L0 176z"
                    fill="currentColor"
                  />
                </svg>
              </span>
              Email
            </a>
          </p>
        </div>
        <h3
          class="text-heading-sm pb-1"
        >
          Office hours
        </h3>
        <p
          class="text-sm"
        >
          <span>
            8-4 Mon-Thurs

            <br />
            9-4 Fri

            <br />
            10-2 Weekends
          </span>
        </p>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`ListingDetailsSeeTheUnit renders SeeDetailsOnline when only MLS is set 1`] = `
<DocumentFragment>
  <section
    class="aside-block see-the-unit translate"
  >
    <div
      class="see-the-unit__heading"
    >
      <h2
        class="text__underline-weighted"
      >
        See the Unit
      </h2>
    </div>
    <div
      class="see-the-unit__subsection"
    >
      <h3
        class="text-heading-md pb-3"
      >
        Open houses
      </h3>
      <div>
        <div
          class="open-houses"
        >
          <section
            class=""
          >
            <div
              class="pb-3"
            >
              <p
                class="text text-gray-800 pb-2 flex justify-between items-center"
              >
                <span
                  class="inline-block text-sm uppercase normal-case"
                >
                  December 2, 2019
                </span>
                <span
                  class="inline-block text-xs font-bold ml-5 font-alt-sans"
                >
                  2:00 PM - 6:00 PM
                </span>
              </p>
            </div>
            <div
              class="pb-3"
            >
              <p
                class="text text-gray-800 pb-2 flex justify-between items-center"
              >
                <span
                  class="inline-block text-sm uppercase normal-case"
                >
                  December 6, 2019
                </span>
                <span
                  class="inline-block text-xs font-bold ml-5 font-alt-sans"
                >
                  10:00 AM - 12:00 PM
                </span>
              </p>
              <div
                class="text-sm text-gray-700 pb-3"
              >
                <div
                  class="flex flex-col"
                >
                  <span
                    class="links-space translate"
                  >
                    <span>
                      SFPL
                    </span>
                  </span>
                  <span>
                    1 Library Way, San Francisco
                  </span>
                </div>
              </div>
            </div>
            <div
              class="false"
            >
              <p
                class="text text-gray-800 pb-2 flex justify-between items-center"
              >
                <span
                  class="inline-block text-sm uppercase normal-case"
                >
                  December 7, 2019
                </span>
              </p>
            </div>
          </section>
        </div>
      </div>
    </div>
    <div
      class="see-the-unit__subsection"
    >
      <h3
        class="text-heading-md pb-3"
      >
        See details online
      </h3>
      <div>
        <div
          class="flex-row space-y-1"
        >
          <div>
            <a
              class="seeds-link no-underline"
              href="https://thefrontsteps.com/featured-listings/sfar/mls-481663-2820_scott_street_san_francisco_ca_94123/"
            >
              See the unit on MLS
            </a>
          </div>
        </div>
      </div>
    </div>
    <div
      class="see-the-unit__subsection"
    >
      <h3
        class="text-heading-md pb-3"
      >
        Make an appointment
      </h3>
      <div>
        <p
          class="text-sm pb-3"
        >
          Call, email, or text to request a tour.
        </p>
        <p>
          Matthew Burns
        </p>
        <p
          class="text-gray-700 text-sm"
        >
          Leasing Agent
        </p>
        <div
          class="pt-2"
        >
          <p
            class="pb-1"
          >
            <a
              href="tel:415 5552323"
            >
              <span
                class="ui-icon ui-medium pr-2"
              >
                <svg
                  fill="#0077DA"
                  viewBox="0 0 32 32"
                >
                  <path
                    d="M22 20c-2 2-2 4-4 4s-4-2-6-4-4-4-4-6 2-2 4-4-4-8-6-8-6 6-6 6c0 4 4.109 12.109 8 16s12 8 16 8c0 0 6-4 6-6s-6-8-8-6z"
                  />
                </svg>
              </span>
              Call (415) 555-2323
            </a>
          </p>
          <p
            class="pb-3"
          >
            <a
              href="mailto:ae@email.com"
            >
              <span
                class="pr-2"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-envelope "
                  data-icon="envelope"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M48 64C21.5 64 0 85.5 0 112c0 15.1 7.1 29.3 19.2 38.4L236.8 313.6c11.4 8.5 27 8.5 38.4 0L492.8 150.4c12.1-9.1 19.2-23.3 19.2-38.4c0-26.5-21.5-48-48-48L48 64zM0 176L0 384c0 35.3 28.7 64 64 64l384 0c35.3 0 64-28.7 64-64l0-208L294.4 339.2c-22.8 17.1-54 17.1-76.8 0L0 176z"
                    fill="currentColor"
                  />
                </svg>
              </span>
              Email
            </a>
          </p>
        </div>
        <h3
          class="text-heading-sm pb-1"
        >
          Office hours
        </h3>
        <p
          class="text-sm"
        >
          <span>
            8-4 Mon-Thurs

            <br />
            9-4 Fri

            <br />
            10-2 Weekends
          </span>
        </p>
      </div>
    </div>
  </section>
</DocumentFragment>
`;
